Normal maps broken in master... again #90854

Closed
opened 2021-08-22 18:54:57 +02:00 by Steffen Dünner · 8 comments

System Information
Operating system: Linux-5.11.0-27-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-21 21:31, hash: 721fad37a1
Worked: All builds before https://developer.blender.org/rBb8ecdbcd964a7e78d7e077ef84a914b1374ae076

Short description of error
This is kind of a followup of my previous report https://developer.blender.org/T90776 that got fixed. But it looks like a new bug was born then.
Normal maps from image textures look very broken in final rendering while in preview they look like they should.
It took me a while to reproduce because at first I thought my normal map texture was broken or it was caused by its bit-depth (16 bit integer). But then I noticed that all kinds of normal maps show the behaviour.

Exact steps for others to reproduce the error

  • Open the attached blend file. It contains one packed normal map as an EXR but the file format doesn't matter.
    Normal_Map_Bug_v02.blend
  • Press F12 to render
  • Here's a screenshot where on the left you can see the preview render and on the right the F12 render. There are two cylinders in each image. They have the same material except that the cylinder on the right also has a simple normal map.
    It renders more or less black, but the effect in production scenes looks like the normals look into a completely wrong direction, almost as if the color management was set to sRGB instead of non-color or something like that.
    image.png
  • Eevee renders perfectly. Preview also looks fine.

P.S.: Upon further investigation I accidentally found out that normal maps work perfectly on objects with rotation 0,0,0. If I offset the rotation it looks like the rotation gets added to the shading normals somehow. The same goes for objects with applied rotations (0,0,0) that are parented to rotated objects. Like it happens very often when importing objects from other DCCs that use Y-up.
In the attached repro file you can confirm this by un-parenting the right cylinder and afterwards applying its rotations so that it gets reset to 0,0,0. Then it renders fine.

**System Information** Operating system: Linux-5.11.0-27-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-21 21:31, hash: `721fad37a1` Worked: All builds before https://developer.blender.org/rBb8ecdbcd964a7e78d7e077ef84a914b1374ae076 **Short description of error** This is kind of a followup of my previous report https://developer.blender.org/T90776 that got fixed. But it looks like a new bug was born then. Normal maps from image textures look very broken in final rendering while in preview they look like they should. It took me a while to reproduce because at first I thought my normal map texture was broken or it was caused by its bit-depth (16 bit integer). But then I noticed that all kinds of normal maps show the behaviour. **Exact steps for others to reproduce the error** - Open the attached blend file. It contains one packed normal map as an EXR but the file format doesn't matter. [Normal_Map_Bug_v02.blend](https://archive.blender.org/developer/F10306431/Normal_Map_Bug_v02.blend) - Press F12 to render - Here's a screenshot where on the left you can see the preview render and on the right the F12 render. There are two cylinders in each image. They have the same material except that the cylinder on the right also has a simple normal map. It renders more or less black, but the effect in production scenes looks like the normals look into a completely wrong direction, almost as if the color management was set to sRGB instead of non-color or something like that. ![image.png](https://archive.blender.org/developer/F10306436/image.png) - Eevee renders perfectly. Preview also looks fine. P.S.: Upon further investigation I accidentally found out that normal maps work perfectly on objects with rotation 0,0,0. If I offset the rotation it looks like the rotation gets added to the shading normals somehow. The same goes for objects with applied rotations (0,0,0) that are parented to rotated objects. Like it happens very often when importing objects from other DCCs that use Y-up. In the attached repro file you can confirm this by un-parenting the right cylinder and afterwards applying its rotations so that it gets reset to 0,0,0. Then it renders fine.

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscribers: @kevindietrich, @Alaska

Added subscribers: @kevindietrich, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm with the provided file:

CC @kevindietrich as it seems to be related to your commits. b8ecdbcd96 seemed to be the cause for this issue, however a change to Blender/Cycles between now and then has changed the artifact scene. Most likely c0dd6f1164

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-22 16:45, hash: b477333473

Can confirm with the provided file: CC @kevindietrich as it seems to be related to your commits. b8ecdbcd96 seemed to be the cause for this issue, however a change to Blender/Cycles between now and then has changed the artifact scene. Most likely c0dd6f1164 **System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-22 16:45, hash: `b477333473`

Added subscriber: @Dec

Added subscriber: @Dec

This issue was referenced by blender/cycles@7214f4c3d0

This issue was referenced by blender/cycles@7214f4c3d067044b705dce23fb8797ccf615d8fe

This issue was referenced by bffa168157

This issue was referenced by bffa1681577e3c850c4fbab5799612febf32a245

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2021-08-24 01:46:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90854
No description provided.